fix(packages/app): streaming stdout should appear above (not next to) stderr
Fixes #543

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -274,6 +274,10 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+.repl-result[data-stream] {
+    /* streaming output of stdout; make sure stderr occurs below */
+    flex-direction: column;
+}
 .repl.sidecar-visible p {
     white-space: normal;
 }
