--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -1,5 +1,21 @@
 /* color variables */
 body {
+    --color-black: hsl(120, 3%, 73%);
+    --color-red: hsl(0, 50%, 60%);
+    --color-light-red: hsl(0, 50%, 75%);
+    --color-green: hsl(66, 39%, 57%);
+    --color-light-green: hsla(66, 39%, 57%, 75%);
+    --color-very-light-green: hsla(66, 39%, 57%, 25%);
+    --color-yellow: hsl(40, 81%, 40%)
+    --color-light-yellow: hsl(40, 81%, 70%);
+    --color-very-light-yellow: hsla(40, 81%, 70%, 0.1);
+    --color-blue: hsl(208, 32%, 63%);
+    --color-magenta: #b294bb;
+    --color-cyan: #8abeb7;
+    --color-white: hsl(216, 6%, 16%);
+    --color-light-gray: hsl(216, 12%, 13.5%);
+    --color-dark-gray: hsl(216, 10%, 49%);
+
     --color-hover-primary-text: #294c86;
     --color-content-divider: hsl(208, 25%, 36%);
     --color-tag-beta-fill: #dfe3e6;
@@ -8,28 +24,28 @@ body {
     --color-tag-ibm-text: var(--color-text-01);
     --color-stripe-01: hsl(216, 24%, 8%);
     --color-stripe-02: hsl(216, 8%, 23%);
-    --color-text-01: hsl(120, 3%, 73%);
+    --color-text-01: var(--color-black);
     --color-text-02: hsl(120, 4%, 44%);
     --color-text-against-dark-bg: var(--color-text-01);
-    --color-support-01: hsl(0, 50%, 60%);
-    --color-support-01-lighter: hsl(0, 50%, 75%);
-    --color-support-02: hsl(66, 39%, 57%);
-    --color-support-03: hsl(40, 81%, 70%);
-    --color-support-03-darker: hsl(40, 81%, 40%);
+    --color-support-01: var(--color-red);
+    --color-support-01-lighter: var(--color-light-red);
+    --color-support-02: var(--color-green);
+    --color-support-03: var(--color-light-yellow);
+    --color-support-03-darker: var(--color-yellow);
     --color-support-04: #5aaafa;
-    --color-brand-01: hsl(208, 32%, 63%);
+    --color-brand-01: var(--color-blue);
     --color-brand-01-10: hsla(210, 64%, 40%, 10%);
     --color-brand-02: hsl(208, 48%, 63%);
     --color-brand-03: #de935f;
-    --color-ui-01: hsl(216, 6%, 16%);
+    --color-ui-01: var(--color-white);
     --color-ui-02: hsl(216, 6%, 14.5%);
     --color-ui-03: hsl(216, 10%, 17%);
-    --color-ui-04: hsl(216, 12%, 13.5%);
-    --color-ui-05: hsl(216, 10%, 49%);
+    --color-ui-04: var(--color-light-gray);
+    --color-ui-05: var(--color-dark-gray);
 
-    --color-ok: var(--color-support-02);
-    --color-ok-lighter: hsla(66, 39%, 57%, 75%);
-    --color-error: var(--color-support-01);
+    --color-ok: var(--color-green);
+    --color-ok-lighter: var(--color-light-green);
+    --color-error: var(--color-red);
     --color-error-lighter: var(--color-support-01-lighter);
 
     --color-scrollbar-thumb: hsla(216, 7%, 6%, 0.25);
