--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
@@ -1,5 +1,21 @@
 /* color variables */
 body {
+    --color-black: #152934;
+    --color-red: #e71d32;
+    --color-light-red: rgba(231, 29, 50, 0.75);
+    --color-green: #5aa700;
+    --color-light-green: rgba(97, 164, 38, 0.75);
+    --color-very-light-green: rgba(97, 164, 38, 0.25);
+    --color-yellow: hsl(48, 100%, 38%);
+    --color-light-yellow: #efc100;
+    --color-very-light-yellow: hsla(48, 100%, 47%, 0.1);
+    --color-blue: #3d70b2;
+    --color-magenta: #beaed4;
+    --color-cyan: #00b4a0;
+    --color-white: #fff;
+    --color-light-gray: #dfe3e6;
+    --color-dark-gray: #8c9ba5;
+
     --color-hover-primary-text: #294c86;
     --color-content-divider: #4173AF;
     --color-tag-beta-fill: #dfe3e6;
@@ -8,29 +24,29 @@ body {
     --color-tag-ibm-text: #325c80;
     --color-stripe-01: #152935; /* 202 60 21 */
     --color-stripe-02: #0f212e; /* 205 67 18 */
-    --color-text-01: #152934;
+    --color-text-01: var(--color-black);
     --color-text-02: #5a6872;
     --color-text-against-dark-bg: var(--color-ui-02);
-    --color-support-01: #e71d32;
-    --color-support-01-lighter: rgba(227, 26, 28, 0.8);
-    --color-support-02: #5aa700;
-    --color-support-03: #efc100;
-    --color-support-03-darker: hsl(48, 100%, 38%);  /* dialed down from 47% lightness */
+    --color-support-01: var(--color-red);
+    --color-support-01-lighter: var(--color-light-red);
+    --color-support-02: var(--color-green);
+    --color-support-03: var(--color-light-yellow);
+    --color-support-03-darker: var(--color-yellow);  /* dialed down from 47% lightness */
     --color-support-04: #5aaafa;
-    --color-brand-01: #3d70b2;
+    --color-brand-01: var(--color-blue);
     --color-brand-01-10: hsla(214, 49%, 47%, 0.1); /* 10% opacity */
     --color-brand-02: #5596e6;
-    --color-brand-03: #00b4a0;
-    --color-ui-01: #fff; /* 216 0 100 8 */
+    --color-brand-03: var(--color-cyan);
+    --color-ui-01: var(--color-white);
     --color-ui-02: #f5f7fa; /* 216 2 98 */
     --color-ui-03: #f0f3f6; /* 210 2 96 */
-    --color-ui-04: #dfe3e6; /* 206 3 90 */
-    --color-ui-05: #8c9ba5; /* 204 15 65 */
+    --color-ui-04: var(--color-light-gray); /* 206 3 90 */
+    --color-ui-05: var(--color-dark-gray); /* 204 15 65 */
 
-    --color-ok: var(--color-support-02);
-    --color-ok-lighter: rgba(97, 164, 38, 0.75); /* support-02 at reduced alpha */
-    --color-error: var(--color-support-01);
-    --color-error-lighter: rgba(231, 29, 50, 0.75); /* support-01 at reduced alpha */
+    --color-ok: var(--color-green);
+    --color-ok-lighter: var(--color-light-green); /* support-02 at reduced alpha */
+    --color-error: var(--color-red);
+    --color-error-lighter: var(--color-light-red); /* support-01 at reduced alpha */
 
     --color-scrollbar-thumb: rgba(21, 41, 52, 0.35); /* color-text-01 at reduced alpha */
     --color-scrollbar-thumb-border: var(--color-brand-01);
@@ -51,7 +67,7 @@ body {
     --color-tab-03: #386cb0;
     --color-tab-04: #7fc97f;
     --color-tab-05: #ffff99;
-    --color-tab-06: #beaed4;
+    --color-tab-06: var(--color-magenta);
     --color-tab-07: #f0027f;
     --color-tab-08: #bf5b17;
 }
