--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -2273,6 +2273,10 @@ body a:hover:not(.plain-anchor) {
     color: var(--color-support-04);
 }
 
+.repl-block.valid-response .repl-output.repl-result-has-content .ok {
+    /* for now, let's not show the "ok" after every command, if the result block has content */
+    display: none;
+}
 .repl-block.valid-response .ok, .green-text, .dragover .ok-text-on-dragover {
     color: var(--color-support-02);
 }
