--- a/plugins/plugin-bash-like/web/css/my-diff2html.css
+++ b/plugins/plugin-bash-like/web/css/my-diff2html.css
@@ -70,7 +70,7 @@
 
 .d2h-file-diff .d2h-ins.d2h-change, .d2h-file-diff .d2h-del.d2h-change {
     background-color: var(--color-very-light-yellow);
-    color: var(--color-black);
+    color: var(--color-text-01);
 }
 
 .line-num1, .line-num2 {
