--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -6,7 +6,7 @@ body[kui-theme="Dark"] {
     --color-base00: #1d1f21; /* Default Background */
     --color-base01: #282a2e; /* Lighter Background (Used for status bars) */
     --color-base02: #373b41; /* Selection Background */
-    --color-base03: #969896; /* Comments, Invisibles, Line Highlighting */
+    --color-base03: hsla(120, 1%, 59%, 0.15); /*dialed down opacity #969896*/; /* Comments, Invisibles, Line Highlighting */
     --color-base04: #b4b7b4; /* Dark Foreground (Used for status bars) */
     --color-base05: #c5c8c6; /* Default Foreground, Caret, Delimiters, Operators */
     --color-base06: #e0e0e0; /* Light Foreground (Not often used) */
