--- a/plugins/plugin-bash-like/web/css/my-diff2html.css
+++ b/plugins/plugin-bash-like/web/css/my-diff2html.css
@@ -43,15 +43,18 @@
 
 .d2h-ins {
     /* inserts */
-    background-color: var(--color-very-light-green);
-    border-color: transparent;
+    background-color: transparent;
+    color: var(--color-green);
+    border-color: var(--color-green);
+    border-width: 3px;
 }
 
 .d2h-del {
     /* deletes */
-    background-color: var(--color-very-light-red);
-    color: var(--color-white);
+    background-color: transparent;
+    color: var(--color-red);
     border-color: var(--color-red);
+    border-width: 3px;
 }
 
 .d2h-code-line ins, .d2h-code-side-line ins {
@@ -69,7 +72,7 @@
 }
 
 .d2h-file-diff .d2h-ins.d2h-change, .d2h-file-diff .d2h-del.d2h-change {
-    background-color: var(--color-very-light-yellow);
+    background-color: var(--color-ui-01); /* rgba(0,0,0,0.01); */
     color: var(--color-text-01);
 }
 
@@ -137,4 +140,16 @@
 }
 .d2h-lines-deleted {
     background: var(--color-error-lighter);
+}
+
+/* + prefix text for insert */
+.d2h-ins .d2h-code-line-prefix {
+    color: var(--color-green);
+    font-weight: bold;
+}
+
+/* - prefix text for insert */
+.d2h-del .d2h-code-line-prefix {
+    color: var(--color-red);
+    font-weight: bold;
 }
