--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
@@ -23,6 +23,13 @@ body[kui-theme="Dracula"] {
     --color-light-red: hsla(322, 78%, 62%, 0.75);
     --color-light-green: hsla(146, 100%, 48%, 0.75);
     --color-light-yellow: hsla(70, 100%, 76%, 0.75);
+
+    --color-latency-0: #4d4d4d;
+    --color-latency-1: #999999;
+    --color-latency-2: #e0e0e0;
+    --color-latency-3: #fddbc7;
+    --color-latency-4: #ef8a62;
+    --color-latency-5: #b2182b;
 }
 
 /* dracula highlightjs theme */
