--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
@@ -18,12 +18,19 @@ body[kui-theme="Paraiso"] {
     --color-base0B: #48b685;
     --color-base0C: #5bc4bf;
     --color-base0D: #06b6ef;
-    --color-base0E: #815ba4;
+    --color-base0E: hsl(271, 29%, 60%); /* from L=50% #815ba4 */
     --color-base0F: #e96ba8;
 
     --color-light-red: hsla(5, 83%, 64%, 0.75);
     --color-light-green: hsla(153, 43%, 50%, 0.75);
     --color-light-yellow: hsla(45, 99%, 55%, 0.75);
+
+    --color-latency-0: #542788;
+    --color-latency-1: #998ec3;
+    --color-latency-2: #d8daeb;
+    --color-latency-3: #fee0b6;
+    --color-latency-4: #f1a340;
+    --color-latency-5: #b35806;
 }
 
 /* paraiso-dark highlightjs theme */
